--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -154,7 +154,7 @@
   </script>
 
   <script type="text/javascript">
-
+/*
   bundleid = $.QueryString['p'];
 
     var contentBlocks = 	{
@@ -196,7 +196,7 @@
             }
         }); //ajax
 
-    }); // ready
+    }); // ready */
   </script>
 </head>
 <body>
