--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -200,7 +200,7 @@
 	<div class="container">
 		<h5>DESCRIPTION</h5>
 		<ul id="descriptionList" class="list-group">
-		<!--	<ul id="screenshotsList" class="list-group"></ul>  screenshots-->
+			<ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
 		</ul>
 	</div>
 
