--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -170,6 +170,7 @@
             )
             th.append($("<img>")
               .attr("src",bundleid+'/screenshots/'+$(data).find('image').text())
+              .attr("id",sc-container>)
             )
             $(element).append(th);
           });
@@ -200,7 +201,7 @@
 	<div class="container">
 		<h5>DESCRIPTION</h5>
 		<ul id="descriptionList" class="list-group">
-      <ul id="sc-container"></ul>
+
       <ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
 		</ul>
 	</div>
