--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -169,9 +169,12 @@
               .text($(data).find('description').text())
             )
             th.append($("<img>")
-              .attr({src:"bundleid+'/screenshots/'+$(data).find('image').text()", id:"sc-container"})
-              
+              .attr("src",bundleid+'/screenshots/'+$(data).find('image').text())
+
             )
+            th.append($("<img>")
+            .attr("id",sc-container)
+          )
             $(element).append(th);
           });
 
