--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -172,9 +172,9 @@
               .attr("src",bundleid+'/screenshots/'+$(data).find('image').text())
 
             )
-            th.append($("<img>")
+            /* th.append($("<img>")
             .attr("id",sc-container)
-          )
+          )*/
             $(element).append(th);
           });
 
