--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -171,9 +171,9 @@
             th.append($("<img>")
 							.attr("src",bundleid+'/screenshots/'+$(data).find('image').text())
 						)
-            /* th.append($("<img>")
+            /th.append($("<img>")
             .attr("id",sc-container)
-          )*/
+          )
             $(element).append(th);
           });
 
