--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -171,7 +171,7 @@
             th.append($("<img>")
 							.attr("src",bundleid+'/screenshots/'+$(data).find('image').text())
 						)
-            /th.append($("<img>")
+            th.append($("<img>")
             .attr("id",sc-container)
           )
             $(element).append(th);
@@ -204,7 +204,7 @@
 		<h5>DESCRIPTION</h5>
 		<ul id="descriptionList" class="list-group">
       <ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
-			
+
 		</ul>
 	</div>
 
