--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -169,7 +169,7 @@
               .text($(data).find('description').text())
             )
             th.append($("<img>")
-							.attr({"src":"bundleid+'/screenshots/'+$(data).find('image').text()"})
+							.attr({src:bundleid+'/screenshots/'+$(data).find('image').text(), id:"sc-container"})
 						)
             $(element).append(th);
           });
