--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -164,6 +164,8 @@
             return;
           }
           $.each(source, function(index,data) {
+            var testfind = bundleid+'/screenshots/'+$(data).find('image').text();
+            console.log(testfind);
             var th = $("<div class='thumbnail'>");
             th.append($("<p>")
               .text($(data).find('description').text())
