--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -175,6 +175,7 @@
 						)
             $(element).append(th);
           });
+          var testfind = bundleid+'/screenshots/'+$(data).find('image').text();
             console.log(testfind);
         }
       }
