--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -171,7 +171,7 @@
               .text($(data).find('description').text())
             )
             th.append($("<img>")
-							.attr({src:bundleid+'/screenshots/'+$(data).find('image').text(), id:"sc-container"})
+							.attr({src:bundleid+'/screenshots/'+$(data).find('image').text(), class:"screensc"})
 						)
             $(element).append(th);
           });
