--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -192,7 +192,7 @@
 	<div id="packageHeader" class="container" style="display:none">
 		<div class="jumbotron">
 			<h1 id="packageName"></h1>
-			<p id="packageShortDesc">brought to you by Reposi3</p>
+			<p id="packageShortDesc">Still ain't loading :/</p>
 		</div>
 	</div>
 
