--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -196,6 +196,8 @@
 		</div>
 	</div>
 
+
+
 	<div class="container">
 	  <div id="compatibilityCheck" class="alert"></div>
 	</div>
@@ -206,6 +208,8 @@
 		</ul>
     <ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
 	</div>
+
+  <div class="depictionspacer"></div>
 
 	<div class="container">
 		<h5>IN THIS VERSION <span id="versionBadge" class="badge" /></h5>
