--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="js/ios_version_check.js"></script>
   <style>
 	@media (max-width: 767px) {
-		body{background:#efeff4!important;margin:0;padding:0;border:0;outline:0;box-sizing:border-box}
+		body{background:#ffffff!important;margin:0;padding:0;border:0;outline:0;box-sizing:border-box}
 	}
 	.jumbotron-bg {
 		background: green
@@ -191,8 +191,8 @@
 
 	<div id="packageHeader" class="container" style="display:none">
 		<div class="jumbotron">
-			<h1 id="packageName"></h1>
-			<p id="packageShortDesc">Still ain't loading :/</p>
+			<h1 id="packageName">Bruh it didn't load</h1>
+			<p id="packageShortDesc">Jquery is a bitchass :/</p>
 		</div>
 	</div>
 
@@ -209,7 +209,7 @@
     <ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
 	</div>
 
-  <div class="depictionspacer list-group-item"></div>
+  <div class="depictionspacer"></div>
 
 	<div class="container">
 		<h5>IN THIS VERSION <span id="versionBadge" class="badge" /></h5>
