--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.querystring.js"></script>
@@ -58,7 +58,7 @@
         ,"#descriptionList"	:
 			{"type":"list"
 				,"source" :"package>descriptionlist>description"
-				,"paragraphElement"	: "<li class='list-group-item'>"
+				,"paragraphElement"	: "<li class=''>"
 				,"emptyListCallback":function(e){$("#descriptionPanel").hide()}
 			}
         ,"#screenshotsLink"	:
@@ -71,7 +71,7 @@
 					}
 					// create screenshots link
 					$("#descriptionList").append(
-						$("<a class='link-item list-group-item'>")
+						$("<a class='link-item'>")
 							.attr("href","screenshots.html?p="+bundleid)
 							.text("Screenshots")
 					);
@@ -82,7 +82,7 @@
 			{"type":"list"
 				,"source" :"package>changelog>change"
 				,"reverseRender"    : true
-				,"paragraphElement"	: "<li class='list-group-item'>"
+				,"paragraphElement"	: "<li class=''>"
 				,"emptyListCallback":function(e){$("#changesList").hide()}
 			}
 		,"#changelogLink" :
@@ -95,7 +95,7 @@
                     }
                     // create changelog link
                     $("#changesList").append(
-                        $("<a class='link-item list-group-item'>")
+                        $("<a class='link-item'>")
                             .attr("href","changelog.html?p="+bundleid)
                             .text("Full Changelog")
                     );
@@ -104,20 +104,20 @@
 		,"#dependencyList" :
 			{"type":"list"
 				,"source" :"package>dependencies>package"
-				,"paragraphElement"	: "<li class='list-group-item'>"
+				,"paragraphElement"	: "<li class=''>"
 				,"emptyListCallback":function(e){$("#dependenciesContainer").remove()}
 			}
 		,"#externalLinksList" :
 			{"type":"custom"
 				,"source" :"package>links>link"
-				,"paragraphElement"	: "<li class='list-group-item'>"
+				,"paragraphElement"	: "<li class=''>"
 				,"render":function(element,source){
 					if ($(source).size()==0){
 						$('#externalLinksContainer').remove()
 					}
 
                     $.each(source, function(index,data) {
-                        var a = $("<a class='link-item list-group-item'>");
+                        var a = $("<a class='link-item'>");
                         a.attr("href",$(data).find('url').text());
                         if ($(data).find('iconclass')) {
                             var i =  $("<span>")
@@ -204,28 +204,28 @@
 
 	<div class="container">
 		<h5>DESCRIPTION</h5>
-		<ul id="descriptionList" class="list-group">
+		<ul id="descriptionList" class="">
 		</ul>
-    <ul id="screenshotsList" class="list-group"></ul>  <!--screenshots-->
+    <ul id="screenshotsList" class=""></ul>  <!--screenshots-->
 	</div>
 
 
 
 	<div class="container">
 		<h5>IN THIS VERSION <span id="versionBadge" class="badge" /></h5>
-		<ul id="changesList" class="list-group">
+		<ul id="changesList" class="">
 			<li id="changelogLink" />
 		</ul>
 	</div>
 	<div class="container" id="dependenciesContainer">
 		<h5>DEPENDENCIES</h5>
-		<ul id="dependencyList" class="list-group">
+		<ul id="dependencyList" class="">
 		</ul>
 	</div>
 
 	<div class="container" id="externalLinksContainer">
 		<h5>LINKS</h5>
-		<ul id="externalLinksList" class="list-group">
+		<ul id="externalLinksList" class="">
 		</ul>
 	</div>
 
@@ -254,7 +254,7 @@
                 ,"source":"repo>footerlinks>link"
                 ,"render":function(element,source) {
                     $.each(source, function(index,data) {
-                        var a = $("<a class='link-item list-group-item'>");
+                        var a = $("<a class='link-item -item'>");
                         a.attr("href",$(data).find('url').text());
                         if ($(data).find('iconclass')) {
                             var i =  $("<span>")
@@ -288,7 +288,7 @@
 <div id="contactInfo">
 	<div class="container">
 		<h5>CONTACT</h5>
-		<ul class="list-group" id="repoFooterLinks">
+		<ul class="" id="repoFooterLinks">
 		</ul>
 	</div>
 </div>
