--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -166,7 +166,7 @@
           $.each(source, function(index,data) {
 
 
-            var th = $("<div class='thumbnail'>");
+            var th = $("<div class='screenshot-holder'>");
             th.append($("<p>")
               .text($(data).find('description').text())
             )
