--- a/depictions/web/index.html
+++ b/depictions/web/index.html
@@ -229,7 +229,7 @@
 	</div>
 
 	<div class="container" id="externalLinksContainer">
-		<h5>LINKS</h5>
+		<h5>OTHER LINKS AND STUFF</h5>
 		<ul id="externalLinksList" class="mainlist">
 		</ul>
 	</div>
